fix: Resolve critical security vulnerabilities and permissions
- Add missing 'issues: write' permission to security workflow
- Update Gin from v1.9.1 to v1.11.0 to fix known vulnerabilities
- Update Prometheus client from v1.22.0 to v1.23.2
- Update Prometheus common from v0.62.0 to v0.66.1
- Standardize Go version to 1.24.5 across all Dockerfiles
- Regenerate go.sum with latest secure dependencies

This resolves the deployment blocking due to critical security issues.

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -20,6 +20,7 @@ permissions:
   actions: read
   packages: read
   pull-requests: write  # Needed for PR comments
+  issues: write  # Needed for creating security issues
 
 jobs:
   # Code security analysis
