--- a/deploy/docker/tn-manager/Dockerfile
+++ b/deploy/docker/tn-manager/Dockerfile
@@ -1,13 +1,29 @@
 # TN Manager Multi-stage Dockerfile
 # Stage 1: Build
-FROM golang:1.24.5-alpine AS builder
+FROM golang:1.24.5-alpine3.19 AS builder
+
+# Security labels and metadata
+LABEL maintainer="O-RAN MANO Team"
+LABEL org.opencontainers.image.title="TN Manager"
+LABEL org.opencontainers.image.description="Transport Network Manager"
+LABEL org.opencontainers.image.version="1.0.0"
+LABEL org.opencontainers.image.vendor="O-RAN Alliance"
+LABEL org.opencontainers.image.licenses="Apache-2.0"
+LABEL org.opencontainers.image.url="https://o-ran.org"
+LABEL security.scan="trivy,grype,snyk"
+LABEL security.distroless="false"
+LABEL security.user="non-root"
 
 # Security: Use non-root user for build
 RUN adduser -D -s /bin/sh appuser
 
-# Install security updates and necessary tools
-RUN apk update && apk add --no-cache git ca-certificates tzdata && \
-    update-ca-certificates
+# Install security updates and necessary tools, clean cache
+RUN apk update && apk upgrade && apk add --no-cache \
+    git \
+    ca-certificates \
+    tzdata && \
+    update-ca-certificates && \
+    rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
 
 # Set working directory
 WORKDIR /workspace
@@ -29,12 +45,23 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
     -o tn-manager cmd/manager/main.go
 
 # Stage 2: Runtime
-FROM alpine:3.18
+FROM alpine:3.19
 
-# Install runtime dependencies and security updates
-RUN apk update && apk add --no-cache ca-certificates iproute2 iptables && \
+# Security labels
+LABEL org.opencontainers.image.title="TN Manager Runtime"
+LABEL security.scan="trivy,grype,snyk"
+LABEL security.user="non-root"
+
+# Install runtime dependencies and security updates, clean cache
+RUN apk update && apk upgrade && apk add --no-cache \
+    ca-certificates \
+    iproute2 \
+    iptables \
+    curl \
+    dumb-init && \
     update-ca-certificates && \
-    adduser -D -s /bin/sh appuser
+    adduser -D -s /bin/sh -u 10007 appuser && \
+    rm -rf /var/cache/apk/* /tmp/* /var/tmp/*
 
 # Copy the binary
 COPY --from=builder /workspace/tn-manager /usr/local/bin/tn-manager
@@ -43,7 +70,7 @@ COPY --from=builder /workspace/tn-manager /usr/local/bin/tn-manager
 RUN mkdir -p /var/log/tn-manager && \
     chown appuser:appuser /var/log/tn-manager
 
-# Use non-root user (Note: May need elevated privileges for network operations)
+# Use non-root user (Note: May need elevated privileges for network operations via K8s security context)
 USER appuser
 
 # Create volume for config
@@ -52,10 +79,10 @@ VOLUME ["/config", "/var/log/tn-manager"]
 # Expose ports
 EXPOSE 8080 9090
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
+# Health check with improved security
+HEALTHCHECK --interval=30s --timeout=10s --start-period=45s --retries=3 \
+    CMD curl -f --max-time 5 --retry 2 --retry-delay 1 http://localhost:8080/health || exit 1
 
-# Run the binary
-ENTRYPOINT ["/usr/local/bin/tn-manager"]
-CMD ["--config=/config/tn-manager.yaml"]
+# Security: Run as non-root with dumb-init
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+CMD ["/usr/local/bin/tn-manager", "--config=/config/tn-manager.yaml"]
