fix: Resolve critical container security vulnerabilities
- Updated all Dockerfiles to use Alpine 3.19 (eliminates CVEs from 3.18)
- Enhanced multi-stage builds with security labels and metadata
- Implemented unique non-root user IDs for all containers (10001-10007)
- Added dumb-init for proper signal handling
- Strengthened health checks with improved timeouts and retries
- Added comprehensive package cache cleanup (rm -rf /var/cache/apk/*)

Container Security Improvements:
- Fixed base image vulnerabilities by upgrading Alpine 3.18 → 3.19
- Added security metadata labels for vulnerability scanning
- Implemented proper privilege separation with distinct user IDs
- Enhanced runtime security with signal handling and process management
- Improved container isolation and attack surface reduction

Kubernetes Security Enhancements:
- Added Pod Security Standards with restricted enforcement
- Enhanced security contexts with runAsNonRoot: true
- Implemented comprehensive admission controllers
- Added CIS Kubernetes Benchmark compliance
- Created security scanning validation framework

GitHub Actions Security Workflow Updates:
- Updated all security scanners to latest versions (Trivy 0.24.0, Grype v4, Snyk 0.4.0)
- Enhanced container build process with optimized caching
- Added comprehensive SARIF output for GitHub Security tab
- Implemented detailed security reporting and incident response
- Added timeout protections and enhanced error handling

This resolves the container scan failures in GitHub Actions security alerts.

--- a/.github/workflows/production-deployment.yml
+++ b/.github/workflows/production-deployment.yml
@@ -155,18 +155,26 @@ jobs:
 
       - name: Validate component directory
         run: |
-          # Check if component directory exists, if not look in deploy/docker/
-          if [ ! -d "${{ matrix.component }}" ]; then
-            if [ -d "deploy/docker/${{ matrix.component }}" ]; then
-              echo "Component found in deploy/docker/${{ matrix.component }}"
-              COMPONENT_PATH="deploy/docker/${{ matrix.component }}"
-            else
-              echo "ERROR: Component directory ${{ matrix.component }} not found!"
-              exit 1
-            fi
-          else
+          # Check component directory in multiple locations
+          COMPONENT_PATH=""
+
+          # First check root directory
+          if [ -d "${{ matrix.component }}" ]; then
             COMPONENT_PATH="${{ matrix.component }}"
+          # Then check deploy/docker/
+          elif [ -d "deploy/docker/${{ matrix.component }}" ]; then
+            COMPONENT_PATH="deploy/docker/${{ matrix.component }}"
+          # Check for tn components in tn/ subdirectory
+          elif [ "${{ matrix.component }}" = "tn-agent" ] && [ -d "tn/agent" ]; then
+            COMPONENT_PATH="tn/agent"
+          elif [ "${{ matrix.component }}" = "tn-manager" ] && [ -d "tn/manager" ]; then
+            COMPONENT_PATH="tn/manager"
+          else
+            echo "ERROR: Component directory ${{ matrix.component }} not found!"
+            exit 1
           fi
+
+          echo "Component ${{ matrix.component }} found at: $COMPONENT_PATH"
           echo "COMPONENT_PATH=$COMPONENT_PATH" >> $GITHUB_ENV
 
       - name: Run unit tests
@@ -192,7 +200,12 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ${{ env.COMPONENT_PATH }}/Dockerfile
+          file: |
+            ${{
+              matrix.component == 'tn-agent' && 'deploy/docker/tn-agent/Dockerfile' ||
+              matrix.component == 'tn-manager' && 'deploy/docker/tn-manager/Dockerfile' ||
+              format('{0}/Dockerfile', env.COMPONENT_PATH)
+            }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
