--- a/deploy/k8s/base/namespace.yaml
+++ b/deploy/k8s/base/namespace.yaml
@@ -10,6 +10,7 @@ metadata:
     pod-security.kubernetes.io/enforce: restricted
     pod-security.kubernetes.io/audit: restricted
     pod-security.kubernetes.io/warn: restricted
+    security-scan: enabled
   annotations:
     seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
 ---
@@ -25,6 +26,7 @@ metadata:
     pod-security.kubernetes.io/enforce: restricted
     pod-security.kubernetes.io/audit: restricted
     pod-security.kubernetes.io/warn: restricted
+    security-scan: enabled
   annotations:
     seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
 ---
@@ -40,6 +42,7 @@ metadata:
     pod-security.kubernetes.io/enforce: restricted
     pod-security.kubernetes.io/audit: restricted
     pod-security.kubernetes.io/warn: restricted
+    security-scan: enabled
   annotations:
     seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
 ---
@@ -55,5 +58,6 @@ metadata:
     pod-security.kubernetes.io/enforce: restricted
     pod-security.kubernetes.io/audit: restricted
     pod-security.kubernetes.io/warn: restricted
+    security-scan: enabled
   annotations:
     seccomp.security.alpha.kubernetes.io/defaultProfileName: runtime/default
