--- a/deploy/k8s/base/rbac.yaml
+++ b/deploy/k8s/base/rbac.yaml
@@ -26,6 +26,7 @@ metadata:
   labels:
     app.kubernetes.io/name: oran-o2-client
     app.kubernetes.io/component: o2-client
+automountServiceAccountToken: false
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -63,6 +64,7 @@ metadata:
   labels:
     app.kubernetes.io/name: oran-tn-manager
     app.kubernetes.io/component: tn-manager
+automountServiceAccountToken: false
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -72,6 +74,7 @@ metadata:
   labels:
     app.kubernetes.io/name: oran-tn-agent
     app.kubernetes.io/component: tn-agent
+automountServiceAccountToken: false
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
