fix: Update Go version and base images to resolve security vulnerabilities
- Update Go version from 1.24.5 to 1.23 (latest stable)
- Update Dockerfile base images from golang:1.23-alpine3.19 to golang:1.23-alpine
- Update runtime Alpine images from 3.19 to 3.20 for security patches
- Update GitHub Actions workflows to use Go 1.23 consistently

These changes resolve container build failures and address critical security
vulnerabilities detected in GitHub Actions security scans.

--- a/deploy/docker/orchestrator/Dockerfile
+++ b/deploy/docker/orchestrator/Dockerfile
@@ -1,6 +1,6 @@
 # Orchestrator Multi-stage Dockerfile
 # Stage 1: Build
-FROM golang:1.23-alpine3.19 AS builder
+FROM golang:1.23-alpine AS builder
 
 # Security labels and metadata
 LABEL maintainer="O-RAN MANO Team"
@@ -50,7 +50,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
     -o orchestrator cmd/orchestrator/main.go
 
 # Stage 2: Runtime
-FROM alpine:3.19
+FROM alpine:3.20
 
 # Security labels
 LABEL org.opencontainers.image.title="Orchestrator Runtime"
