--- a/deploy/docker/o2-client/Dockerfile
+++ b/deploy/docker/o2-client/Dockerfile
@@ -1,6 +1,6 @@
 # O2 Client Multi-stage Dockerfile
 # Stage 1: Build
-FROM golang:1.23-alpine3.19 AS builder
+FROM golang:1.23-alpine AS builder
 
 # Security labels and metadata
 LABEL maintainer="O-RAN MANO Team"
@@ -51,7 +51,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
     -o o2-client ./o2-client/cmd/main.go
 
 # Stage 2: Runtime
-FROM alpine:3.19
+FROM alpine:3.20
 
 # Security labels
 LABEL org.opencontainers.image.title="O2 Client Runtime"
