--- a/deploy/docker/test-framework/requirements.txt
+++ b/deploy/docker/test-framework/requirements.txt
@@ -2,10 +2,10 @@
 pytest==7.4.4
 pytest-html==4.1.1
 pytest-json-report==1.5.0
-requests==2.32.3
+requests==2.32.5  # Fixes .netrc credentials leak vulnerability
 PyYAML==6.0.2
-cryptography==42.0.8
-urllib3==2.2.2
-certifi==2024.7.4
+cryptography==43.0.3  # Fixes CVE-2025-4674 and OpenSSL issues
+urllib3==2.3.0  # Fixes redirect control and retry issues
+certifi==2024.8.30  # Updated certificate bundle
 charset-normalizer==3.3.2
-idna==3.7
+idna==3.10  # Updated for compatibility
