--- a/nlp/requirements.txt
+++ b/nlp/requirements.txt
@@ -4,9 +4,9 @@ jsonschema==4.23.0
 pytest==7.4.4
 pytest-cov==4.0.0
 redis==5.0.8
-# Security-focused dependencies
-cryptography==42.0.8
-urllib3==2.2.2
-requests==2.32.3
-certifi==2024.7.4
-idna==3.7
+# Security-focused dependencies - updated for CVE fixes
+cryptography==43.0.3  # Fixes CVE-2025-4674 and OpenSSL issues
+urllib3==2.3.0  # Fixes redirect control and retry issues
+requests==2.32.5  # Fixes .netrc credentials leak vulnerability
+certifi==2024.8.30  # Updated certificate bundle
+idna==3.10  # Updated for compatibility
