--- a/deploy/docker/test-framework/requirements.txt
+++ b/deploy/docker/test-framework/requirements.txt
@@ -4,8 +4,8 @@ pytest-html==4.1.1
 pytest-json-report==1.5.0
 requests==2.32.5  # Fixes .netrc credentials leak vulnerability
 PyYAML==6.0.2
-cryptography==43.0.3  # Fixes CVE-2025-4674 and OpenSSL issues
-urllib3==2.3.0  # Fixes redirect control and retry issues
+cryptography==44.0.1  # Fixes CVE-2024-12797 (RFC7250 handshakes vulnerability)
+urllib3==2.5.0  # Fixes CVE-2025-50182 and CVE-2025-50181 (redirect control and retry issues)
 certifi==2024.8.30  # Updated certificate bundle
 charset-normalizer==3.3.2
 idna==3.10  # Updated for compatibility
